--- a/catalog.html
+++ b/catalog.html
@@ -8,13 +8,12 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="container">
         <a href="index.html" class="page-header__logo">
-          <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="main-nav__toggle" type="button">X</button>
+        <button class="page-header__toggle" type="button">X</button>
         <nav class="main-nav">
-
           <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
@@ -23,23 +22,24 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__user-menu user-menu">
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
-            </li>
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
-            </li>
-          </ul>
         </nav>
+        <ul class="main-nav__user-menu user-menu">
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
+          </li>
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main class="page-main">
+      <section class="page-title">
+        <div class="container">
+          <h1 class="page-title__text">Каталог товаров</h1>
+        </div>
+      </section>
       <div class="container">
-        <section class="title__wrap">
-          <h1 class="title">Каталог товаров</h1>
-        </section>
-
         <section class="main-catalog">
           <ul class="main-catalog__list product-preview">
             <li class="product-preview__item">
@@ -74,7 +74,7 @@
         </section>
       </div>
       <section class="production-view">
-        <div class="container production-view__container">
+        <div class="container">
 
           <h2 class="subtitle production-view__title">Процесс производства</h2>
 
@@ -90,10 +90,10 @@
 
     </main>
     <footer class="page-footer">
-      <div class="container page-footer__container">
-      <a href="#" class="page-footer__logo">
-        <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
-      </a>
+      <div class="container">
+        <a href="#" class="page-footer__logo">
+          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+        </a>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst
@@ -112,7 +112,7 @@
             <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
-        </div>
+      </div>
     </footer>
 
   </body>
