--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="container">
         <a href="index.html" class="page-header__logo">
-          <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="main-nav__toggle" type="button">X</button>
+        <button class="page-header__toggle" type="button">X</button>
         <nav class="main-nav">
-
           <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
@@ -23,24 +22,26 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__user-menu user-menu">
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
-            </li>
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
-            </li>
-          </ul>
         </nav>
+        <ul class="main-nav__user-menu user-menu">
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
+          </li>
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main class="page-main">
-        <section class="title__wrap title__wrap--index">
-          <h1 class="title">Милые штуки ручной работы для дома</h1>
-        </section>
+      <section class="page-title page-title--index">
+        <div class="container page-title__container--index">
+          <h1 class="page-title__text">Милые штуки ручной работы для дома</h1>
+        </div>
+      </section>
 
-        <section class="product-menu">
-          <div class="product-menu__container">
+      <section class="product-menu">
+        <div class="container">
           <ul class="product-menu__list">
             <li class="product-menu__item product-menu__link--color-lighter">
               <a href="#" class="product-menu__link ">Предметы интерьера</a>
@@ -49,10 +50,10 @@
               <a href="#" class="product-menu__link">Детские игрушки</a>
             </li>
           </ul>
-          </div>
-        </section>
-        <section class="week-product">
-          <div class="week-product__container">
+        </div>
+      </section>
+      <section class="week-product">
+        <div class="container">
           <div class="week-product__title">
             <h2 class="page-subtitle">Вязаные корзинки</h2>
             <h3 class="week-product__title-description">Товар недели</h3>
@@ -73,27 +74,27 @@
                 <td class="text info-table__value">15 см</td>
               </tr>
             </table>
-          <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
-          <b class="week-product__price">Цена: 990 руб.</b>
-          <a href="#" class="button week-product__order">ЗАКАЗАТЬ</a>
+            <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
+            <b class="week-product__price">Цена: 990 руб.</b>
+            <a href="#" class="button week-product__order">ЗАКАЗАТЬ</a>
           </div>
-          </div>
-        </section>
-        <section class="advantages">
-          <div class="advantages__container">
-            <h2 class="page-subtitle">Коротко о нас:</h2>
-            <ul class="advantages__list">
-              <li class="subtitle advantages__item">Экологически чистые материалы</li>
-              <li class="subtitle advantages__item">Скандинавский стиль по российской цене</li>
-              <li class="subtitle advantages__item">Увеличивает лайки на фотографиях</li>
-              <li class="subtitle advantages__item">Связано вручную с любовью и умилением</li>
-              <li class="subtitle advantages__item">Поддержка отечественного производителя</li>
-              <li class="subtitle advantages__item">Поставляется в подарочной упаковке</li>
-            </ul>
-            </div>
-        </section>
-        <section class="reviews">
-          <div class="container reviews__container">
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="container">
+          <h2 class="page-subtitle">Коротко о нас:</h2>
+          <ul class="advantages__list">
+            <li class="subtitle advantages__item">Экологически чистые материалы</li>
+            <li class="subtitle advantages__item">Скандинавский стиль по российской цене</li>
+            <li class="subtitle advantages__item">Увеличивает лайки на фотографиях</li>
+            <li class="subtitle advantages__item">Связано вручную с любовью и умилением</li>
+            <li class="subtitle advantages__item">Поддержка отечественного производителя</li>
+            <li class="subtitle advantages__item">Поставляется в подарочной упаковке</li>
+          </ul>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="container">
           <h2 class="page-subtitle reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
             <blockquote class="text reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
@@ -106,36 +107,36 @@
             <button class="reviews__button reviews__button-next" type="button" name="button"></button>
             <button class="reviews__button reviews__button-previous" type="button" name="button"></button>
           </div>
-            <a href="#" class="button reviews__write">Написать</a>
-            </div>
-        </section>
-        <section class="contacts">
-          <div class="contacts__container">
-            <h3 class="page-subtitle">Контакты</h3>
-            <table class="contacts__list">
-              <tr class="contacts__item">
-                <td class="text contacts__value">e-mail</td>
-                <td class="text contacts__value">
-                  <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-                </td>
-              </tr>
-              <tr class="contacts__item">
-                <td class="text contacts__value">адрес:</td>
-                <td class="text contacts__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
-              </tr>
-            </table>
-            <div class="contacts__location">
-              <img class="contacts__location-map" src="img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,ул. Большая Конюшенная,д. 19/8, офис 101">
-            </div>
-            <a class="button contacts__write" href="write-company.html">Напишите нам</a>
-            </div>
-        </section>
+          <a href="#" class="button reviews__write">Написать</a>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="container">
+          <h3 class="page-subtitle">Контакты</h3>
+          <table class="contacts__list">
+            <tr class="contacts__item">
+              <td class="text contacts__value">e-mail</td>
+              <td class="text contacts__value">
+                <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+              </td>
+            </tr>
+            <tr class="contacts__item">
+              <td class="text contacts__value">адрес:</td>
+              <td class="text contacts__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+            </tr>
+          </table>
+        </div>
+        <div class="contacts__location">
+          <img class="contacts__location-map" src="img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,ул. Большая Конюшенная,д. 19/8, офис 101">
+        </div>
+        <a class="button contacts__write" href="write-company.html">Напишите нам</a>
+      </section>
     </main>
     <footer class="page-footer">
-      <div class="container page-footer__container">
-      <a href="#" class="page-footer__logo">
-        <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
-      </a>
+      <div class="container">
+        <a href="#" class="page-footer__logo">
+          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+        </a>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst
@@ -154,7 +155,7 @@
             <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
-        </div>
+      </div>
     </footer>
 
   </body>
