--- a/index.html
+++ b/index.html
@@ -7,12 +7,51 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <svg style="display: none">
+      <symbol id="icon-search" viewBox="-0.8 -0.8 17.6 17.6">
+        <path d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
+      </symbol>
+      <symbol id="icon-cart" viewBox="264.205 370.961 20.294 18.849">
+        <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
+      </symbol>
+      <symbol id="icon-interior" viewBox="-259.404 -19.675 40.219 62.411">
+        <path d="M-244.227 18.283c-0.286 0.966-0.245 2.191 0.027 3.639 0.494 2.635 1.687 6.041 2.358 9.67h5.062c0.696-3.641 1.949-7.05 2.471-9.683 0.287-1.445 0.33-2.66 0.041-3.617 -0.275-0.899-0.89-1.618-2.021-2.303h-5.997C-243.361 16.668-243.96 17.38-244.227 18.283zM-232.395 38.278h-13.799c-1.293 0-2.299 0.976-2.299 2.229v2.229h2.299 13.799 2.299v-2.229C-230.096 39.254-231.102 38.278-232.395 38.278zM-225.262-17.446h-11.732c0-1.244-1.015-2.229-2.3-2.229 -1.283 0-2.3 0.985-2.3 2.229h-11.737l-6.073 25.517c0.794-0.461 1.589-0.992 2.632-0.992 1.359 0 2.243 0.818 2.924 1.375 0.682 0.557 1.162 0.849 1.447 0.849 0.292 0.001 0.769-0.287 1.451-0.836 0.681-0.548 1.564-1.358 2.915-1.358 1.349 0 2.237 0.806 2.919 1.354 0.684 0.549 1.161 0.84 1.451 0.84 0.146 0 0.338-0.073 0.58-0.214 0.242-0.141 0.53-0.353 0.872-0.626 0.512-0.411 1.139-0.967 1.99-1.218 0.284-0.085 0.593-0.136 0.93-0.136 1.347 0 2.238 0.805 2.92 1.354 0.683 0.548 1.159 0.84 1.451 0.84 0.287-0.002 0.766-0.296 1.445-0.85 0.684-0.554 1.571-1.367 2.925-1.367 1.356 0 2.239 0.817 2.919 1.371 0.342 0.276 0.631 0.489 0.872 0.631 0.24 0.143 0.431 0.214 0.575 0.214 0.288 0 0.762-0.293 1.442-0.854 0.68-0.559 1.567-1.384 2.929-1.384 1.044 0 1.839 0.533 2.632 0.997L-225.262-17.446zM-235.881 33.82h-6.864c-0.657 0-1.15 0.479-1.15 1.115 0 0.635 0.493 1.113 1.15 1.113h6.9c0.655 0 1.15-0.479 1.15-1.113 0-0.636-0.495-1.115-1.15-1.115H-235.881zM-239.295 9.336c-0.146 0-0.338 0.074-0.58 0.213 -0.157 0.094-0.37 0.261-0.57 0.41v3.731h2.299V9.959C-238.651 9.581-239.054 9.336-239.295 9.336z"/>
+      </symbol>
+      <symbol id="icon-toy" viewBox="226.001 226.19 60 59.62">
+        <path d="M226.001,269.871l27.438,15.934v-23.346l-27.438-15.94V269.871z M277.347,238.627v2.453 c0,1.817-3.458,3.29-7.73,3.29c-4.266,0-7.727-1.473-7.727-3.29v-4.059h0.024c0.26,1.714,3.604,3.073,7.702,3.073 c4.272,0,7.729-1.474,7.729-3.285c0-1.819-3.457-3.289-7.729-3.289c-0.339,0-0.675,0.01-1.002,0.03l-4.975-2.888v3.086 c0,1.817-3.454,3.29-7.723,3.29c-2.683,0-5.045-0.583-6.433-1.467c-0.196-0.203-0.439-0.401-0.732-0.586 c-0.363-0.381-0.565-0.797-0.565-1.236v-2.986l-4.807,2.792c-0.347-0.017-0.696-0.033-1.054-0.033c-4.267,0-7.727,1.469-7.727,3.289 c0,1.811,3.46,3.285,7.727,3.285c4.099,0,7.446-1.358,7.705-3.073h0.022v4.059c0,1.817-3.455,3.29-7.727,3.29 c-4.267,0-7.727-1.473-7.727-3.29v-2.42l-5.952,3.452l27.531,15.986l27.351-15.882L277.347,238.627z M263.703,248.793 c0,1.817-3.46,3.287-7.727,3.287c-4.269,0-7.729-1.47-7.729-3.287v-4.059h0.024c0.26,1.715,3.603,3.076,7.705,3.076 c4.101,0,7.443-1.361,7.705-3.076h0.021V248.793L263.703,248.793z M258.558,262.666v23.144L286,269.871v-23.144L258.558,262.666z  M255.917,232.762c4.269,0,7.723-1.47,7.723-3.286c0-1.814-3.454-3.287-7.723-3.287c-4.27,0-7.729,1.472-7.729,3.287 C248.187,231.292,251.647,232.762,255.917,232.762"/>
+      </symbol>
+      <symbol id="icon-flower" viewBox="8.014 4.35 31.972 37.301">
+        <path  d="M24,41.65c8.827,0,15.986-7.159,15.986-15.986C31.158,25.664,24,32.822,24,41.65z M12.641,20.78 c0,2.451,1.989,4.441,4.44,4.441c0.932,0,1.803-0.294,2.513-0.782l-0.036,0.337c0,2.451,1.99,4.441,4.441,4.441 s4.44-1.99,4.44-4.441l-0.036-0.337c0.719,0.497,1.582,0.782,2.514,0.782c2.451,0,4.44-1.99,4.44-4.441 c0-1.768-1.038-3.286-2.54-3.997c1.492-0.71,2.54-2.229,2.54-3.997c0-2.451-1.989-4.44-4.44-4.44c-0.932,0-1.803,0.293-2.514,0.781 L28.44,8.79c0-2.451-1.989-4.44-4.44-4.44s-4.441,1.99-4.441,4.44l0.036,0.337c-0.719-0.497-1.581-0.781-2.513-0.781 c-2.451,0-4.44,1.99-4.44,4.44c0,1.768,1.039,3.286,2.54,3.997C13.68,17.494,12.641,19.012,12.641,20.78z M24,12.343 c2.451,0,4.44,1.989,4.44,4.44c0,2.451-1.989,4.44-4.44,4.44s-4.441-1.99-4.441-4.44C19.559,14.332,21.549,12.343,24,12.343z  M8.014,25.664c0,8.827,7.158,15.986,15.986,15.986C24,32.822,16.842,25.664,8.014,25.664z"/>
+      </symbol>
+      <symbol id="icon-money" viewBox="46.212 56.834 46.575 27.332">
+        <path d="M88.882,56.834H50.116c-2.156,0-3.904,1.749-3.904,3.905v19.521c0,2.156,1.748,3.905,3.904,3.905h38.766 c2.156,0,3.905-1.749,3.905-3.905V60.739C92.787,58.583,91.038,56.834,88.882,56.834z M49.235,81.784V59.551h40.202v22.233H49.235z" />
+  <path d="M53.14,77.88h32.395V63.456H53.14V77.88z M69.5,65.354c2.936,0,5.315,2.38,5.315,5.314c0,2.936-2.379,5.314-5.315,5.314 s-5.314-2.379-5.314-5.314C64.185,67.733,66.564,65.354,69.5,65.354z"/>
+      </symbol>
+      <symbol id="icon-heart" viewBox="47.475 50.071 33.05 27.857">
+        <path  d="M80.525,58.808c0-4.825-3.912-8.736-8.736-8.736c-3.405,0-6.348,1.951-7.789,4.793 c-1.441-2.842-4.384-4.793-7.789-4.793c-4.825,0-8.736,3.911-8.736,8.736c0,9.127,14.657,19.121,16.525,19.121 C65.869,77.929,80.525,67.979,80.525,58.808z"/>
+      </symbol>
+      <symbol id="icon-ball" viewBox="0 0 34.373 34.373">
+        <path d="M.286 14.069a17.244 17.244 0 0 0 .008 6.301l4.121-3.21-4.129-3.091zM24.403 1.585C19.62-.623 13.959-.559 9.149 1.992l7.513 5.625 7.741-6.032zM33.901 13.175l-4.811 3.748 4.936 3.695a17.248 17.248 0 0 0-.125-7.443zM9.209 32.414c4.844 2.534 10.724 2.65 15.73.113l-8.096-6.062-7.634 5.949zM7.914 14.433L1.681 9.767c-.32.669-.595 1.356-.825 2.056l5.308 3.974 1.75-1.364zM18.593 25.102l8.336 6.242a17.184 17.184 0 0 0 1.74-1.372l-8.326-6.234-1.75 1.364zM11.413 11.707L4.002 6.158a17.073 17.073 0 0 0-1.269 1.723l6.931 5.189 1.749-1.363zM22.093 22.375l8.092 6.059c.471-.544.904-1.112 1.297-1.701l-7.639-5.721-1.75 1.363zM14.913 8.98L7.196 3.203a17.436 17.436 0 0 0-1.709 1.394l7.676 5.747 1.75-1.364zM25.592 19.649l6.972 5.221c.33-.662.615-1.341.855-2.033l-6.077-4.55-1.75 1.362zM26.448 2.706L.88 22.626c.233.698.513 1.386.839 2.059l26.52-20.663a17.006 17.006 0 0 0-1.791-1.316zM30.743 6.624a17.418 17.418 0 0 0-.939-1.106L2.786 26.567a17.144 17.144 0 0 0 1.279 1.717l27.09-21.108c-.134-.186-.269-.37-.412-.552zM32.298 8.999L5.552 29.838c.544.501 1.114.962 1.708 1.382l25.962-20.228a17.158 17.158 0 0 0-.924-1.993z"/>
+      </symbol>
+      <symbol id="icon-rocket" viewBox="612.532 500.386 54.156 23.183">
+        <path d="M652.844 506.098c-3.647-.971-7.839-1.667-12.359-1.666a46.394 46.394 0 0 0-7.71.623l-6.784-4.668-13.456.005 5.811 6.184h8.447c-4.58 1.598-6.759 3.515-6.759 3.515l.002 3.777s2.313 1.912 6.931 3.518l-8.623-.005-5.811 6.188 13.455.002 6.816-4.692c2.261.398 4.822.647 7.681.648 4.522-.001 8.712-.697 12.36-1.667-1.176-1.775-1.915-3.743-1.918-5.877.003-2.141.738-4.112 1.917-5.885zM656.267 507.132c-1.284 1.605-1.969 3.25-1.965 4.84-.007 1.597.677 3.238 1.968 4.847 6.399-2.162 10.419-4.841 10.419-4.841s-4.019-2.68-10.422-4.846z"/>
+      </symbol>
+      <symbol id="icon-gift" viewBox="239.665 239.757 32.666 32.486">
+        <path  d="M242.56,272.243h12.504v-13.91H242.56V272.243z M270.742,248.623h-7.335 c0.521-0.267,0.984-0.549,1.396-0.845c1.588-1.133,2.424-2.57,2.42-3.999c0.002-1.169-0.556-2.202-1.359-2.901 c-0.805-0.704-1.869-1.119-3.016-1.121c-1.22-0.001-2.352,0.421-3.32,1.069c-1.459,0.979-2.606,2.451-3.424,4.067 c-0.039,0.079-0.078,0.157-0.115,0.236c-0.299-0.623-0.647-1.226-1.041-1.792c-0.691-0.985-1.523-1.86-2.497-2.511 c-0.97-0.646-2.103-1.069-3.322-1.069c-1.213,0.004-2.323,0.514-3.155,1.295c-0.828,0.783-1.41,1.885-1.412,3.135 c-0.002,0.73,0.211,1.494,0.649,2.188c0.552,0.872,1.424,1.628,2.633,2.248h-6.588c-0.878,0-1.591,0.712-1.591,1.59v5.897h15.396 v-7.488h1.873v7.488h15.396v-5.897C272.333,249.334,271.621,248.623,270.742,248.623 M248.38,246.284 c-0.622-0.391-1-0.785-1.22-1.135c-0.22-0.354-0.294-0.662-0.296-0.963c-0.004-0.504,0.248-1.042,0.691-1.461 c0.437-0.415,1.028-0.667,1.562-0.667h0.013c0.685,0,1.366,0.231,2.046,0.683c1.018,0.671,1.975,1.85,2.645,3.187 c0.342,0.676,0.609,1.39,0.789,2.087C251.528,247.694,249.532,247.013,248.38,246.284 M258.917,244.657 c0.557-0.797,1.21-1.466,1.887-1.916c0.68-0.451,1.362-0.683,2.047-0.683h0.006c0.574,0,1.117,0.22,1.494,0.55 c0.377,0.336,0.571,0.739,0.573,1.171c-0.004,0.512-0.272,1.259-1.467,2.132c-1.138,0.825-3.101,1.673-6.127,2.265 C257.62,246.974,258.177,245.704,258.917,244.657 M256.937,272.243h12.506v-13.91h-12.506V272.243z"/>
+      </symbol>
+      <symbol id="icon-left-arrow" viewBox="0 0 50 26.003">
+        <polygon points="50,11.002 7.659,11.002 15.833,2.828 13.005,0 0,12.998 0.003,13.001 0,13.005 13.005,26.003 15.833,23.175 7.661,15.002 50,15.002 "/>
+      </symbol>
+      <symbol id="icon-right-arrow" viewBox="0 0 50 26.003">
+        <polygon points="0,11.002 42.341,11.002 34.166,2.828 36.995,0 50,12.998 49.996,13.001 50,13.005 36.995,26.003 34.166,23.175 42.339,15.002 0,15.002 "/>
+      </symbol>
+    </svg>
     <header class="page-header">
       <div class="container">
         <a href="index.html" class="page-header__logo">
-          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle" type="button">X</button>
+        <button class="page-header__toggle" type="button"></button>
         <nav class="main-nav">
           <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
@@ -22,21 +61,30 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
+          <ul class="main-nav__user-menu user-menu">
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Поиск по сайту
+                <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
+                  <use xlink:href="#icon-search"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
+                <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
+                  <use xlink:href="#icon-cart"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </nav>
-        <ul class="main-nav__user-menu user-menu">
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
-          </li>
-        </ul>
+
       </div>
     </header>
     <main class="page-main">
       <section class="page-title page-title--index">
         <div class="container page-title__container--index">
-          <h1 class="page-title__text">Милые штуки ручной работы для дома</h1>
+          <h1 class="page-title__text">Милые штуки ручной работы&nbsp;для дома</h1>
         </div>
       </section>
 
@@ -44,10 +92,16 @@
         <div class="container">
           <ul class="product-menu__list">
             <li class="product-menu__item product-menu__link--color-lighter">
-              <a href="#" class="product-menu__link ">Предметы интерьера</a>
+              <a href="#" class="product-menu__link">Предметы интерьера
+                <svg class="product-menu__link--icon" width="40" height="62">
+                  <use xlink:href="#icon-interior"></use>
+                </svg></a>
             </li>
             <li class="product-menu__item product-menu__link--color-darker">
-              <a href="#" class="product-menu__link">Детские игрушки</a>
+              <a href="#" class="product-menu__link">Детские игрушки
+                <svg class="product-menu__link--icon" width="60" height="60">
+                  <use xlink:href="#icon-toy"></use>
+                </svg></a>
             </li>
           </ul>
         </div>
@@ -84,12 +138,31 @@
         <div class="container">
           <h2 class="page-subtitle">Коротко о нас:</h2>
           <ul class="advantages__list">
-            <li class="subtitle advantages__item">Экологически чистые материалы</li>
-            <li class="subtitle advantages__item">Скандинавский стиль по российской цене</li>
-            <li class="subtitle advantages__item">Увеличивает лайки на фотографиях</li>
-            <li class="subtitle advantages__item">Связано вручную с любовью и умилением</li>
-            <li class="subtitle advantages__item">Поддержка отечественного производителя</li>
-            <li class="subtitle advantages__item">Поставляется в подарочной упаковке</li>
+            <li class="subtitle advantages__item">Экологически чистые&nbsp;материалы
+              <svg class="advantages__item--icon" width="32" height="37">
+                <use xlink:href="#icon-flower"></use>
+              </svg>
+            </li>
+            <li class="subtitle advantages__item">Скандинавский стиль по&nbsp;российской цене
+              <svg class="advantages__item--icon" width="46" height="27">
+                <use xlink:href="#icon-money"></use>
+              </svg></li>
+            <li class="subtitle advantages__item">Увеличивает лайки на&nbsp;фотографиях
+              <svg class="advantages__item--icon" width="33" height="28">
+                <use xlink:href="#icon-heart"></use>
+              </svg></li>
+            <li class="subtitle advantages__item">Связано вручную с любовью&nbsp;и умилением
+              <svg class="advantages__item--icon" width="34" height="34">
+                <use xlink:href="#icon-ball"></use>
+              </svg></li>
+            <li class="subtitle advantages__item">Поддержка отечественного производителя
+              <svg class="advantages__item--icon" width="54" height="23">
+                <use xlink:href="#icon-rocket"></use>
+              </svg></li>
+            <li class="subtitle advantages__item">Поставляется в подарочной&nbsp;упаковке
+              <svg class="advantages__item--icon" width="33" height="32">
+                <use xlink:href="#icon-gift"></use>
+              </svg></li>
           </ul>
         </div>
       </section>
@@ -104,8 +177,16 @@
             </cite>
           </div>
           <div class="reviews__nav">
-            <button class="reviews__button reviews__button-next" type="button" name="button"></button>
-            <button class="reviews__button reviews__button-previous" type="button" name="button"></button>
+            <button class="reviews__button reviews__button-next" type="button" name="button">
+              <svg class="reviews__nav--icon" width="50" height="26">
+                <use xlink:href="#icon-left-arrow"></use>
+              </svg>
+            </button>
+            <button class="reviews__button reviews__button-previous" type="button" name="button">
+              <svg class="reviews__nav--icon" width="50" height="26">
+                <use xlink:href="#icon-right-arrow"></use>
+              </svg>
+            </button>
           </div>
           <a href="#" class="button reviews__write">Написать</a>
         </div>
@@ -122,7 +203,7 @@
             </tr>
             <tr class="contacts__item">
               <td class="text contacts__value">адрес:</td>
-              <td class="text contacts__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+              <td class="text contacts__value">г.&nbsp;Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8,&nbsp;офис 101</td>
             </tr>
           </table>
         </div>
