--- a/form.html
+++ b/form.html
@@ -10,9 +10,9 @@
     <header class="page-header">
       <div class="container">
         <a href="index.html" class="page-header__logo">
-          <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
+          <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle" type="button">X</button>
+        <button class="page-header__toggle" type="button"></button>
         <nav class="main-nav">
           <ul class="main-nav__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
@@ -22,15 +22,24 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
+          <ul class="main-nav__user-menu user-menu">
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Поиск по сайту
+                <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
+                  <use xlink:href="#icon-search"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
+                <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
+                  <use xlink:href="#icon-cart"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </nav>
-        <ul class="main-nav__user-menu user-menu">
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item user-menu__item">
-            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
-          </li>
-        </ul>
+
       </div>
     </header>
     <main class="page-main">
@@ -120,22 +129,36 @@
         <a href="#" class="page-footer__logo">
           <img src="http://placehold.it/86x35" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <ul class="page-footer__social social">
+        <ul class="page-footer__social social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--inst"></a>inst
+            <a href="#" class="social__link social__link--inst">
+              <svg class="social__item--icon" width="22" height="21">
+                <use xlink:href="#icon-insta"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--fb"></a>fb
+            <a href="#" class="social__link social__link--fb">
+              <svg class="social__item--icon" width="15" height="28">
+                <use xlink:href="#icon-fb"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--tw"></a>tw
+            <a href="#" class="social__link social__link--tw">
+              <svg class="social__item--icon" width="23" height="20">
+                <use xlink:href="#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
         </ul>
 
         <div class="page-footer__coopyright coopyright">
-          <b class="coopyright__text">Разработано</b>
           <a href="#" class="coopyright__link">
-            <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
+            <span class="coopyright__text">Разработано</span>
+            <svg class="copyright__link--icon" width="27" height="37">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" x="0" y="3" width="26.943" height="34.09"></use>
+            </svg>
           </a>
         </div>
       </div>
