--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <a href="#" class="coopyright__link">
             <span class="coopyright__text">Разработано</span>
             <svg class="copyright__link--icon" width="27" height="37">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" x="0" y="3" width="26.943" height="34.09"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy" width="27" height="34"></use>
             </svg>
           </a>
         </div>
